# scrapy-extensions

./: .cruft.json  .pre-commit-config.yaml  .pylintrc  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  Pipfile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py
.github/actions/python-poetry-env/: action.yml
api_docs/: index.html
changelog/: index.html
docs/: api_docs.md
scrapy_extensions/: __init__.py  __version__.py  extensions.py  items.py  loaders.py  pipelines.py  spiders.py  utils.py
search/: search_index.json
src/scrapy_extensions/: __init__.py  downloadermiddlewares.py  extensions.py  loaders.py  loggers.py  middlewares.py  pipelines.py  utils.py
v0/: README.md
v0/scrapy_extensions/: __version__.py  middleware.py  pipelines.py  utils.py
